feat: internal system
